--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <h2 class="title">OUR FOCAL POINT</h2>
                         <span class="line"></span>
                         <p>At KENME ONLINE ENGLISH, we focus on helping our students who find it difficult to take out time from their daily schedule for learning, but are passionate about the same. As our lessons are all online, students can make learning English a part of their daily routine, without having to spend extra time for it. As you have the convenience to learn from your comfort zone, KENME makes your learning a very pleasing affair.</p>
-                        <p>We, Keralites, who've always been keen about imbibing changes and different cultures, couldn't do it any better, than by mastering the Global Language that is English. This is where you will find the need for a world- class, standard learning aid, and that's exactly what awaits you at KENME Online English, Hesitate no further in joining our family, wherein you can kick-start your journey towards nailing the English language.</p>
+                        <p>We, Keralites, who've always been keen about imbibing changes and different cultures, couldn't do it any better, than by mastering the Global Language that is English. This is where you will find the need for a world- class, standard learning aid, and that's exactly what awaits you at KENME Online English. Hesitate no further in joining our family, wherefrom you can kick-start your journey towards nailing the English language.</p>
                        <br>
                     </div>
                 </div>
@@ -531,7 +531,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                             <div class="col-lg-6 col-md-5">
                                 <div class="testimonials-image">
                                     <div class="single-testimonial-image">
-                                        <img src="assets/images/testimonials-1.png" alt="">
+                                        <img src="assets/images/Test3.png" alt="">
                                     </div>
                                     <div class="single-testimonial-image">
                                         <img src="assets/images/testimonials-2.png" alt="">
