--- a/blog-details.html
+++ b/blog-details.html
@@ -92,7 +92,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <div class="details-content mt-50">
                             <img width="100%" src="assets/images/blog-details.jpg" alt="">
    
-                            <h3 class="title">SIGNIFICANCE OF ENGLISH LANGUAGE</h3>
+                            <h3 class="title">SIGNIFICANCE OF THE ENGLISH LANGUAGE</h3>
 
                             <p>"To learn a language is to have one more window from which to look at the world." This saying is absolutely true about the English language. Known as the "window to the world," it opens up a lot of possibilities and developments for an individual. The significance and dominance of the English language can be traced back to the British Empire, which, at its peak, covered 25% of the earth’s surface. During the colonial times, the British often forced people to speak English, rather than their native language. Even though the origin of the English language is complicated, it has left an important mark on media, trade, and business.
 English is rightly called the global language, and it is said that one out of five people can speak or at least understand the language. English is the official language of 53 countries and is used as a lingua franca by people from all around the world. This means that if you are working in Africa or traveling to Japan, or wherever else in the world, studying English can help you strike up a conversation with almost anyone from the globe over. </p>
