--- a/faq.html
+++ b/faq.html
@@ -162,7 +162,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                     </ul> -->
                                 </li>
                                 <li>
-                                    <a href="faq.html">Faq</a>
+                                    <a href="faq.html">FAQ</a>
                                     <!-- <ul class="nav-dropdown nav-submenu">
                                         <li><a href="blog.html">Blog </a></li>
                                         <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
@@ -204,7 +204,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
         <div class="page-banner-bg bg_cover" style="background-image: url(assets/images/page-banner.jpg);">
             <div class="container">
                 <div class="banner-content text-center">
-                    <h2 class="title">FAQ's</h2>
+                    <h2 class="title">FAQ</h2>
                 </div>
             </div>
         </div>
@@ -219,9 +219,9 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title-2">
-                        <h2 class="title">FAQ's</h2>
+                        <h2 class="title">FAQ</h2>
                         <span class="line"></span>
-                        <p>frequently asked questions.</p>
+                        <p>frequently asked questions.)</p>
                     </div>
                 </div>
             </div>
