--- a/faq.html
+++ b/faq.html
@@ -221,7 +221,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                     <div class="section-title-2">
                         <h2 class="title">FAQ</h2>
                         <span class="line"></span>
-                        <p>frequently asked questions.)</p>
+                        <p>(FREQUENTLY ASKED QUESTIONS)</p>
                     </div>
                 </div>
             </div>
