--- a/faq.html
+++ b/faq.html
@@ -230,13 +230,13 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                     <div class="card">
                         <span class="question">Q:</span>
                         <div class="card-header" id="headingOne">
-                            <a href="#" data-toggle="collapse" data-target="#collapseOne">Why should I choose Kenme?</a>                            
+                            <a href="#" data-toggle="collapse" data-target="#collapseOne">Why should I choose KENME?</a>                            
                         </div>
                     
                         <div id="collapseOne" class="collapse show" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>Kenme is one of the leading and first- standard online language training institute that offers the best training to excel in English language.</p>
+                                <p>KENME is a leading, student-friendly online language training institute that offers the best training to excel in the English language.</p>
                             </div>
                         </div>
                     </div>
@@ -248,8 +248,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <div id="collapseTwo" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>Duration is depended upon your course. For the Entry and Secondary level courses, the duration will be 60 days and for advanced level, it is for 30 days.</p>
-                            </div>
+                             <p>Duration will depend upon your course level and type. For instance, Entry and Secondary Level Courses' duration is 60 days, whereas that of Advanced Level is 30 days.</p>                            </div>
                         </div>
                     </div>
                     <div class="card">
@@ -260,8 +259,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <div id="collapseThree" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>There is no fixed time to attend the classes. As the personal tutor is available from 9-11, you can attend the lessons according to your convenience and submit the works to your assigned personal tutor.</p>
-                            </div>
+                               <p>There is no fixed time to attend the classes. As the personal tutor is available from 9:00 AM - 11:00 PM, you can attend the classes as per your convenience, and submit the homework to your assigned personal tutor.</p>                            </div>
                         </div>
                     </div>
                     <div class="card">
@@ -272,22 +270,10 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <div id="collapseFour" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>Of course, personal tutors are assigned to each student and will be helping you till the end of your classes. They will check your home works and give feedbacks along with keeping you motivated and enthusiastic.</p>
-                            </div>
+                              <p>For sure, yes. Personal tutors are assigned to each student and they'll be around as our students' guide and mentor till the students' respective courses' expiry period.</p>                            </div>
                         </div>
                     </div>
-                    <div class="card">
-                        <span class="question">Q:</span>
-                        <div class="card-header" id="headingFive">
-                            <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFive">What are the qualifications of the trainers?</a>                            
-                        </div>
-                        <div id="collapseFive" class="collapse" data-parent="#accordionExample">
-                            <div class="card-body">
-                                <span class="answer">A:</span>
-                                <p>All our trainers are well qualified with post- graduation in English and IELTS qualified and are having years of experience in teaching.</p>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class="card">
                         <span class="question">Q:</span>
                         <div class="card-header" id="headingSix">
