--- a/faq.html
+++ b/faq.html
@@ -277,12 +277,12 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                     <div class="card">
                         <span class="question">Q:</span>
                         <div class="card-header" id="headingSix">
-                            <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseSix">I am very confused in grammar. Do you provide grammar lessons?</a>                            
+                            <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseSix">Do you provide grammar lessons?</a>                            
                         </div>
                         <div id="collapseSix" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>Certainly. Our grammar lessons are tailor- made for the students to grasp the ideas quickly and understand the topics in an easy way.</p>
+                                <p>Yes, we do. And they are curated in a manner to make learning easy and smooth for our students.</p>
                             </div>
                         </div>
                     </div>
