--- a/faq.html
+++ b/faq.html
@@ -294,7 +294,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <div id="collapseNine" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>You are always welcome. We are located at Mini bypass road puthiyara Calicut, Calicut.</p>
+                                <p>You sure can, and are most welcome to. Our office is located at Mini Bypass Road, Puthiyara, Calicut. You can easily find us on the Google Maps.</p>
                             </div>
                         </div>
                     </div>
