--- a/faq.html
+++ b/faq.html
@@ -306,7 +306,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         <div id="collapseTen" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>We are assigning personal tutors; you can interact with them through speaking sessions. Along with that, you will be given a calling activity tutor, with them you can converse through calls and improve communication skills.</p>
+                                <p>Focusing on enhancing our students' communication skills, we provide speaking sessions for our students, which they can engage in with their personal tutors. Moreover, we assign a specialized Calling-Activity tutor, so that the student can practise speaking in English via phone calls.</p>
                             </div>
                         </div>
                     </div>
