--- a/faq.html
+++ b/faq.html
@@ -313,12 +313,12 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                     <div class="card">
                         <span class="question">Q:</span>
                         <div class="card-header" id="headingEleven">
-                            <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseEleven">Will you provide learning materials throughout the class? </a>                            
+                            <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseEleven">Will you provide learning materials throughout the course? </a>                            
                         </div>
                         <div id="collapseEleven" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
                                 <span class="answer">A:</span>
-                                <p>Yes, we do. You will be provided with learning materials on all the topics that are being taught here. All the learning aids are easy and precise for easy comprehension.</p>
+                                <p>Yes, we will. You will be provided with learning materials on all the topics that are being taught here. All the learning aids are easy and precise for quick comprehension.</p>
                             </div>
                         </div>
                     </div>
