--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                 <li><a href="teachers.html">Our Teachers</a></li>
                                 <li><a href="">Our Events</a></li>
                                 <li><a href="blog-left-sidebar.html">Blog Posts</a></li>
-                                <li><a href="faq.html">FAQs</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
                             </ul>
                         </div>
                         
