--- a/faq.html
+++ b/faq.html
@@ -382,7 +382,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                 <li><a href="teachers.html">Our Trainers</a></li>
                                 <li><a href="">Our Events</a></li>
                                 <li><a href="blog-left-sidebar.html">Blog Posts</a></li>
-                                <li><a href="faq.html">FAQs</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
                             </ul>
                         </div>
                     </div>
