--- a/teachers.html
+++ b/teachers.html
@@ -162,7 +162,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                     </ul> -->
                                 </li>
                                 <li>
-                                    <a href="faq.html">Faq</a>
+                                    <a href="faq.html">FAQ</a>
                                     <!-- <ul class="nav-dropdown nav-submenu">
                                         <li><a href="blog.html">Blog </a></li>
                                         <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
@@ -315,7 +315,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                 <li><a href="teachers.html">Our Trainers</a></li>
                                 <li><a href="">Our Events</a></li>
                                 <li><a href="blog-left-sidebar.html">Blog Posts</a></li>
-                                <li><a href="faq.html">FAQs</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
                             </ul>
                         </div>
                     </div>
