--- a/login.html
+++ b/login.html
@@ -175,7 +175,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                     <a href="#">Register</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="register.html">Register</a></li>
-                                        <li><a href="login.html">Login</a></li>
+<!--                                         <li><a href="login.html">Log In</a></li> -->
                                       
                                     </ul>
                                 </li>
@@ -205,7 +205,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
         <div class="page-banner-bg bg_cover" style="background-image: url(assets/images/page-banner.jpg);">
             <div class="container">
                 <div class="banner-content text-center">
-                    <h2 class="title">Login</h2>
+                    <h2 class="title">Log In</h2>
                 </div>
             </div>
         </div>
@@ -220,20 +220,20 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="login-register-content">
-                        <h4 class="title">Login to Your Account</h4>
+                        <h4 class="title">Log In to Your Account</h4>
 
                         <div class="login-register-form">
                             <form action="#">
                                 <div class="single-form">
                                     <label>Username or email address *</label>
-                                    <input type="email" placeholder="Can't go Now!" readonly>
+                                    <input type="email" placeholder="Can't Go Now!" readonly>
                                 </div>
                                 <div class="single-form">
                                     <label>Password</label>
-                                    <input type="password" placeholder="Can't go Now!" readonly>
+                                    <input type="password" placeholder="Can't Go Now!" readonly>
                                 </div>
                                 <div class="single-form">
-                                    <button class=" main-btn btn-block" >Login</button>
+                                    <button class=" main-btn btn-block" >Log In</button>
                                 </div>
                                 <div class="single-form d-flex justify-content-between">
                                     <div class="checkbox">
@@ -241,11 +241,11 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                         <label for="remember"><span></span> Remember Me</label>
                                     </div>
                                     <div class="forget">
-                                        <a href="#">Lost Your Password</a>
+                                        <a href="#">Lost Your Password?</a>
                                     </div>
                                 </div>
                                 <div class="single-form">
-                                    <label>Enquiry Now Or Register Now! ?</label>
+                                    <label>Enquiry Or Register Now?</label>
                                     <a href="register.html" class="main-btn main-btn-2 btn-block">Register</a>
                                 </div>
                             </form>
