--- a/gallery.html
+++ b/gallery.html
@@ -176,7 +176,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                     <a href="#">Register</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="register.html">Register</a></li>
-                                        <li><a href="login.html">Login</a></li>
+<!--                                         <li><a href="login.html">Login</a></li> -->
                                       
                                     </ul>
                                 </li>
