--- a/contact.html
+++ b/contact.html
@@ -229,8 +229,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         </div>
                         <div class="info-content">
                             <h5 class="title">Address</h5>
-                            <p>KENME INSTITUTIONS LLP
-27/2245 A2, MANKAVU BY PASS, KOZHIKODE, Kozhikode, Kerala, 673016, India</p>
+                            <p>KENME INSTITUTIONS LLP 27/2245 A2, MANKAVU BYPASS, KOZHIKODE, KERALA, 673016, INDIA</p>
                         </div>
                     </div>
                 </div>
@@ -241,7 +240,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                         </div>
                         <div class="info-content">
                             <h5 class="title">Phone</h5>
-                            <p><a href="tel:+918137888123">8137888123</a></p>
+                            <p><a href="tel:+918137888123">+918137888123</a></p>
                           
                         </div>
                     </div>
@@ -264,7 +263,6 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                     <div class="col-lg-8">
                         <div class="contact-title text-center">
                             <h3 class="title">Leave a message here</h3>
-                            <p>Here is our event schedule where you can get information about time schedule about this event so it's very easy for you to manage your time and schedule</p>
                         </div>
                     </div>
                 </div>
