--- a/register.html
+++ b/register.html
@@ -235,7 +235,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                                     <input name="name" type="text" required>
                                 </div>
                                 <div class="single-form">
-                                    <label>Whatsapp Number *</label>
+                                    <label>WhatsApp Number *</label>
                                     <input name="number" type="tel" required>
                                 </div>
                                 <div class="single-form">
